// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button block 1`] = `
<a
  aria-disabled="false"
  class="za-button theme-default block"
  role="button"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button bordered 1`] = `
<a
  aria-disabled="false"
  class="za-button theme-default bordered"
  role="button"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button disabled 1`] = `
<a
  aria-disabled="true"
  class="za-button theme-default disabled"
  role="button"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button icon 1`] = `
<a
  aria-disabled="false"
  class="za-button theme-default"
  role="button"
>
  <div
    class="za-button-content"
  >
    <img
      alt=""
      src="https://zhongantecheng.github.io/zarm/images/state.18e78939.png"
    />
    <span>
      foo
    </span>
  </div>
</a>
`;

exports[`Button loading 1`] = `
<a
  aria-disabled="false"
  class="za-button theme-default"
  role="button"
>
  <div
    class="za-button-content"
  >
    <svg
      class="za-spinner rotate360 theme-primary"
      viewbox="0 0 62 62"
    >
      <circle
        class="za-spinner-path"
        cx="31"
        cy="31"
        fill="none"
        r="28.5"
        style="stroke-width:5;"
      />
      <circle
        class="za-spinner-line"
        cx="31"
        cy="31"
        fill="none"
        r="28.5"
        style="stroke-dasharray:26.860617188192727 179.0707812546182;stroke-width:5;"
      />
    </svg>
    <span>
      foo
    </span>
  </div>
</a>
`;

exports[`Button renders correctly 1`] = `
<a
  aria-disabled="false"
  class="za-button theme-default"
  role="button"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button shape is radius 1`] = `
<a
  aria-disabled="false"
  class="za-button theme-default shape-radius"
  role="button"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button size 1`] = `
<a
  aria-disabled="false"
  class="za-button theme-default size-lg"
  role="button"
>
  <span>
    foo
  </span>
</a>
`;

exports[`Button theme 1`] = `
<a
  aria-disabled="false"
  class="za-button theme-primary"
  role="button"
>
  <span>
    foo
  </span>
</a>
`;
